--- a/sbia/ch02/src/main/resources/batch-default.properties
+++ b/sbia/ch02/src/main/resources/batch-default.properties
@@ -1,8 +1,8 @@
-batch.jdbc.driver=org.h2.Driver
-batch.jdbc.url=jdbc:h2:tcp://localhost/mem:sbia_ch02
-batch.jdbc.user=sa
-batch.jdbc.password=
-batch.database.incrementer.class=org.springframework.jdbc.support.incrementer.H2SequenceMaxValueIncrementer
+batch.jdbc.driver=com.mysql.jdbc.Driver
+batch.jdbc.url=jdbc:mysql://localhost:3306/sbia_ch02
+batch.jdbc.user=root
+batch.jdbc.password=root
+batch.database.incrementer.class=org.springframework.jdbc.support.incrementer.MySQLSequenceMaxValueIncrementer
 
 batch.data.source.init=false
 batch.business.schema.script=
